--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ kotlin.mpp.androidSourceSetLayoutVersion=2
 
 #Compose
 org.jetbrains.compose.experimental.uikit.enabled=true
-kotlin.native.cacheKind=none
+#kotlin.native.cacheKind=none
 
 #Android
 android.useAndroidX=true
@@ -21,6 +21,6 @@ android.targetSdk=34
 android.minSdk=24
 
 #Versions
-kotlin.version=1.9.10
-agp.version=8.0.2
-compose.version=1.5.3
+kotlin.version=1.9.20
+agp.version=8.1.1
+compose.version=1.5.10
